--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 html {
   font-family: 'Exo 2', sans-serif;
   color: white;
-  background-color: rgb(20, 20, 20);
+  background: liner-gradient(to right, #FF512F, #DD2476);
   margin-left: 25px;
   margin-right: 25px;
 }
 hr {
-  background-color: rgb(30,30,30);
+  background-color: rgb(30, 30, 30);
   border-color: transparent;
   margin-top: 1rem;
   margin-bottom: 1rem;
